Wed Aug 18 15:04:49 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_root.cpp(destroy):
        
          Removed unused local variable.

Wed Aug 18 14:05:20 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tao/PortableServer/Root_POA.cpp:
        * tao/PortableServer/Root_POA.h:
        * tao/PortableServer/ServantRetentionStrategy.h:
        * tao/PortableServer/ServantRetentionStrategyNonRetain.cpp:
        * tao/PortableServer/ServantRetentionStrategyNonRetain.h:
        * tao/PortableServer/ServantRetentionStrategyRetain.cpp:
        * tao/PortableServer/ServantRetentionStrategyRetain.h:
        Fix bugzilla 3654: Add Active Object Map accessor patches

Tue Aug 17 18:47:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_root.cpp:
        
          Fixed bug in cleanup of root scope when TAO_IDL processes
          multiple files in one execution. Thanks to Olli Savia
          <ops@iki.fi> for reporting the problem.

Tue Aug 17 18:33:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:
          Instead of calling delete on the ami4ccm facet, release it

Tue Aug 17 10:56:02 UTC 2010  Olli Savia  <ops@iki.fi>

        * tao/AnyTypeCode/TypeCode.inl:
        * tao/Object.h:
        * tao/Object.inl:
          Modified template specializations to work with older GCCs.

Tue Aug 17 08:49:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/idltocpp0x/IDLC++0xRFP.odt:
          First initial commit, much more has to be done to get this draft RFP
          ready

        * tao/IIOP_Connector.cpp:
        * tests/TransportCurrent/IIOP/IIOP_Tester.cpp:
          Layout changes

        * tests/POA/On_Demand_Activation/Servant_Activator.cpp:
          Boolean now maps to bool

        * tests/TransportCurrent/IIOP/run_test.pl:
          Removed obsolete helper method
